--- a/payment-detail.html
+++ b/payment-detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pasar Produk BUMN | Checkout</title>
+    <title>Pasar Produk BUMN | Payment Detail</title>
 
     <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -22,7 +22,7 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/script.js"></script>
   </head>
-<body class="checkout-body">
+<body class="checkout">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
@@ -129,76 +129,157 @@
     </nav>
   </header>
 
-  <div class="section">
+  <div class="section checkout">
     <div class="container">
-      <h1 class="title">Pemesanan</h1>
+      <h1 class="title">Pembayaran</h1>
       <h2> Data Pemesanan</h2>
       <div class="row">
-        <div class="col-md-7 col-12">
-          <div class="box-form">
-            <form class="" action="" method="post">
-              <div class="form-group">
-                <label for="">Nama Perusahaan</label>
-                <input type="text" name="" value="" class="form-control">
-                <span class="desc">Nama pemesanan sesuai KTP/SIM/Paspor</span>
+        <div class="col-md-8 col-12">
+          <div class="content-wide-data">
+            <div class="data-box">
+              <div class="head-text">
+                <h6 class="blue">Contact Details</h6>
               </div>
-              <div class="form-row">
-                <div class="col">
-                  <label for="inputCity">No. Handphone</label>
-                  <div class="form-row label-bottom">
-                    <div class="form-group col-md-4">
-                      <input type="text" class="form-control" id="inputID" value="+62">
-                    </div>
-                    <div class="form-group col-md-8">
-                      <input type="text" class="form-control" id="inputNumber">
-                    </div>
-                    <span class="desc">Contoh: +62 812345678, untuk Kode Negara (+62) dan No. Handphone 0812345678</span>
-                  </div>
+              <div class="detail-name">
+                <strong class="name">Novita Hidayati</strong>
+                <a href="#" class="blue">Details</a>
+              </div>
+              <div class="info">
+                <div class="mobile">
+                  <span class="block desc">Mobile Number</span>
+                  <span class="block number">+6285795580512</span>
                 </div>
-                <div class="form-group col">
-                  <label for="inputCity">Email</label>
-                  <input type="email" class="form-control" id="inputEmail">
-                  <span class="desc">Contoh: email@example.com</span>
+                <div class="email">
+                  <span class="block desc">Email</span>
+                  <span class="block name">novitahidayati52@gmail.com</span>
                 </div>
               </div>
-              <div class="action">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Lanjutkan" >LANJUTKAN</button>
+            </div>
+          </div>
+
+          <div class="content-wide-data">
+            <div class="data-box">
+              <div class="head-text">
+                <h6 class="blue">Treveler Details</h6>
               </div>
-            </form>
+              <div class="detail-name">
+                <strong class="name">Miss Novita Hidayati</strong>
+                <a href="#" class="blue">Edit</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="content-wide-data">
+            <div class="data-box">
+              <div class="head-text">
+                <h6 class="blue">Flight Facilities</h6>
+              </div>
+              <div class="detail-name">
+                <strong class="name">Baggage</strong>
+                <a href="#" class="blue">Details</a>
+              </div>
+            </div>
+            <div class="info">
+              <div class="mobile">
+                <span class="block name-info">Miss Novita Hidayati</span>
+                <span class="block destiny">CGK <i class="fa fa-long-arrow-left" aria-hidden="true"></i> PLM</span>
+                <select class="custom-select">
+                  <option selected>20kg - Rp 0</option>
+                  <option value="1">24kg - Rp 0</option>
+                  <option value="2">30kg - Rp 0</option>
+                  <option value="3">40kg - Rp 0</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="content-wide-data">
+            <div class="data-box">
+              <div class="head-text">
+                <h6 class="blue">Policy</h6>
+              </div>
+              <div class="detail-name">
+                <strong class="name">Refund</strong>
+                <label for="" class="green">Refundable</label>
+                <p class="desc">Any cancellations or changes made to booking my be subjected to cancellation fee. Please make sure you have undestood the refund policy before requesting a refund</p>
+                <a href="#" class="block blue">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
+              </div>
+              <div class="detail-name">
+                <strong class="name">Reschedule</strong>
+                <label for="" class="green">Reschedule Available</label>
+                <p class="desc">Thus flight can be rescheduled. Please make sure you have undestood the policy before requesting a reschedule</p>
+                <a href="#" class="block blue">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="content-wide-data">
+            <div class="data-box">
+              <div class="head-text">
+                <h6 class="blue">Price Details</h6>
+              </div>
+              <div class="detail-name">
+                <strong class="name">Price you pay</strong>
+                <strong class="float-right">Rp. 437.672
+                  <a class="blue" data-toggle="collapse" href="#collapsePrice" role="button" aria-expanded="false" aria-controls="collapsePrice"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                </strong>
+              </div>
+              <div class="collapse" id="collapsePrice">
+                <div class="card card-body bg-blue">
+                  <p><i class="fa fa-info-circle" aria-hidden="true"></i> This account (Novita Hidayati (Google)) will earn 35 Points.</p>
+                  <a href="#">Learn more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="action">
+            <button type="button" class="btn btn-blue">Continue to Payment</button>
           </div>
         </div>
-        <div class="col-md-5 col-12">
-          <div class="box-information-input">
-            <div class="box-title">
-              <h2>Kereta Pergi</h2>
-              <p>Rabu, 15 Agu 2018</p>
-            </div>
-            <div class="inner-information">
-              <p class="name-train">Ceramai</p>
-              <p class="blok-train">Bisnis (B)</p>
-              <div class="list-route">
-                <ul>
-                  <li class="from">
-                    <div class="block">
-                      <span class="boarding">17:40</span>
-                      <span class="date">Jul 27, 2018</span>
+        <div class="col-md-4 col-12">
+          <div class="box-payment-detail">
+            <div class="content-wide-data">
+              <div class="data-box">
+                <div class="head-text">
+                  <h6 class="blue">Price Details</h6>
+                </div>
+                <div class="inner-info">
+                  <span class="name">Fri, 21 Dec 2018</span>
+                  <a class="blue float-right" data-toggle="collapse" href="#collapseDetail" role="button" aria-expanded="false" aria-controls="collapseDetail"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+                  <div class="collapse" id="collapseDetail">
+                    <div class="card card-body bg-normal">
+                      <div class="inner-information">
+                        <p class="name-train">Ceramai</p>
+                        <p class="blok-train">Bisnis (B)</p>
+                        <div class="list-route">
+                          <ul>
+                            <li class="from">
+                              <div class="block">
+                                <span class="boarding">17:40</span>
+                                <span class="date">Jul 27, 2018</span>
+                              </div>
+                              <div class="block">
+                                <span class="boarding">Jakarta (GMR)</span>
+                                <span class="date">Stasiun Gambir</span>
+                              </div>
+                            </li>
+                            <li class="to">
+                              <div class="block">
+                                <span class="boarding">09:06</span>
+                                <span class="date">Jul 28, 2018</span>
+                              </div>
+                              <div class="block">
+                                <span class="boarding">Malang (ML</span>
+                                <span class="date">Stasiun Malang</span>
+                              </div>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
-                    <div class="block">
-                      <span class="boarding">Jakarta (GMR)</span>
-                      <span class="date">Stasiun Gambir</span>
-                    </div>
-                  </li>
-                  <li class="to">
-                    <div class="block">
-                      <span class="boarding">09:06</span>
-                      <span class="date">Jul 28, 2018</span>
-                    </div>
-                    <div class="block">
-                      <span class="boarding">Malang (ML</span>
-                      <span class="date">Stasiun Malang</span>
-                    </div>
-                  </li>
-                </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
