--- a/payment-detail.html
+++ b/payment-detail.html
@@ -178,23 +178,23 @@
                 <strong class="name">Baggage</strong>
                 <a href="#" class="blue">Details</a>
               </div>
-            </div>
-            <div class="info">
-              <div class="mobile">
-                <span class="block name-info">Miss Novita Hidayati</span>
-                <span class="block destiny">CGK <i class="fa fa-long-arrow-left" aria-hidden="true"></i> PLM</span>
-                <select class="custom-select">
-                  <option selected>20kg - Rp 0</option>
-                  <option value="1">24kg - Rp 0</option>
-                  <option value="2">30kg - Rp 0</option>
-                  <option value="3">40kg - Rp 0</option>
-                </select>
+              <div class="info">
+                <div class="mobile">
+                  <span class="block name-info">Miss Novita Hidayati</span>
+                  <span class="block destiny">CGK <i class="fa fa-long-arrow-right" aria-hidden="true"></i> PLM</span>
+                  <select class="custom-select">
+                    <option selected>20kg - Rp 0</option>
+                    <option value="1">24kg - Rp 0</option>
+                    <option value="2">30kg - Rp 0</option>
+                    <option value="3">40kg - Rp 0</option>
+                  </select>
+                </div>
               </div>
             </div>
           </div>
 
           <div class="content-wide-data">
-            <div class="data-box">
+            <div class="data-box refund-info">
               <div class="head-text">
                 <h6 class="blue">Policy</h6>
               </div>
@@ -202,13 +202,13 @@
                 <strong class="name">Refund</strong>
                 <label for="" class="green">Refundable</label>
                 <p class="desc">Any cancellations or changes made to booking my be subjected to cancellation fee. Please make sure you have undestood the refund policy before requesting a refund</p>
-                <a href="#" class="block blue">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
+                <a href="#" class="block blue read">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
               </div>
               <div class="detail-name">
                 <strong class="name">Reschedule</strong>
                 <label for="" class="green">Reschedule Available</label>
                 <p class="desc">Thus flight can be rescheduled. Please make sure you have undestood the policy before requesting a reschedule</p>
-                <a href="#" class="block blue">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
+                <a href="#" class="block blue read">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
@@ -221,13 +221,13 @@
               <div class="detail-name">
                 <strong class="name">Price you pay</strong>
                 <strong class="float-right">Rp. 437.672
-                  <a class="blue" data-toggle="collapse" href="#collapsePrice" role="button" aria-expanded="false" aria-controls="collapsePrice"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                  <a class="blue ml-10 icon" data-toggle="collapse" href="#collapsePrice" role="button" aria-expanded="false" aria-controls="collapsePrice"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
                 </strong>
               </div>
               <div class="collapse" id="collapsePrice">
                 <div class="card card-body bg-blue">
                   <p><i class="fa fa-info-circle" aria-hidden="true"></i> This account (Novita Hidayati (Google)) will earn 35 Points.</p>
-                  <a href="#">Learn more</a>
+                  <a href="#" class="blue">Learn more</a>
                 </div>
               </div>
             </div>
@@ -242,16 +242,22 @@
             <div class="content-wide-data">
               <div class="data-box">
                 <div class="head-text">
-                  <h6 class="blue">Price Details</h6>
+                  <h6 class="blue">Contact Details</h6>
                 </div>
-                <div class="inner-info">
+                <div class="detail-name">
+                  <i class="fa fa-plane" aria-hidden="true"></i> <span>Jakarta <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Palembang</span>
+                </div>
+                <div class="inner-info collapse-acc">
                   <span class="name">Fri, 21 Dec 2018</span>
                   <a class="blue float-right" data-toggle="collapse" href="#collapseDetail" role="button" aria-expanded="false" aria-controls="collapseDetail"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
-                  <div class="collapse" id="collapseDetail">
-                    <div class="card card-body bg-normal">
-                      <div class="inner-information">
-                        <p class="name-train">Ceramai</p>
-                        <p class="blok-train">Bisnis (B)</p>
+                  <div class="collapse show" id="collapseDetail">
+                    <div class="collapse-body">
+                        <div class="info-plane">
+                          <img src="assets/img/citilink.png" alt="">
+                          <div class="half">
+                            <span class="name-plane">Citilink </span> <br/> <span class="type">Ekonomi</span>
+                          </div>
+                        </div>
                         <div class="list-route">
                           <ul>
                             <li class="from">
@@ -260,8 +266,8 @@
                                 <span class="date">Jul 27, 2018</span>
                               </div>
                               <div class="block">
-                                <span class="boarding">Jakarta (GMR)</span>
-                                <span class="date">Stasiun Gambir</span>
+                                <span class="boarding">Jakarta (CKG)</span>
+                                <span class="date">Bandara International Soekarno Hatta</span>
                               </div>
                             </li>
                             <li class="to">
@@ -270,12 +276,13 @@
                                 <span class="date">Jul 28, 2018</span>
                               </div>
                               <div class="block">
-                                <span class="boarding">Malang (ML</span>
-                                <span class="date">Stasiun Malang</span>
+                                <span class="boarding">Palembang (PLM)</span>
+                                <span class="date">Sultan Mahmud Badarudin II</span>
                               </div>
                             </li>
                           </ul>
                         </div>
+                        <a href="#" class="blue">Details</a>
                       </div>
                     </div>
                   </div>
