add file upload-payment and upload-payment-sukses

--- a/checkout.html
+++ b/checkout.html
@@ -33,95 +33,22 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse checkout-step" id="navbarSupportedContent">
           <ul class="navbar-nav flex-row ml-md-auto d-md-flex">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Bantuan</a>
+              <a class="nav-link" href="#"><span class="number">1</span> Isi Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Promo</a>
+              <a class="nav-link" href="#"><span class="number">2</span> Review</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Keranjang</a>
+              <a class="nav-link" href="#"><span class="number">3</span> Pembayaran</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Masuk</a>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <div class="header-dropdown">
-                  <h3>Log In ke Akun Anda</h3>
-                </div>
-                <div class="form-login">
-                  <form class="" action="" method="post">
-                    <div class="form-group">
-                      <label for="">Email atau no handphone</label>
-                      <input type="text" name="" value="" class="form-control">
-                    </div>
-                    <div class="form-group">
-                      <label for="">Password</label>
-                      <a href="#" class="forgot">Lupa Password <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                      <input type="password" name="" value="" class="form-control">
-                    </div>
-                    <div class="button">
-                      <button type="submit" name="button" class="btn btn-blue">Log In</button>
-                      <div class="reg">
-                        <p class="ask">Belum punya akun?</p>
-                        <a href="#">Daftar <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <div class="other-log">
-                  <p class="text-center">Atau masuk dengan:</p>
-                  <button type="button" name="button" class="btn btn-facebook">Facebook</button>
-                  <button type="button" name="button" class="btn btn-google">Google</button>
-                </div>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><span class="number">4</span> Proses</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Daftar</a>
-              <div class="dropdown-menu dropdown-menu-right register" aria-labelledby="dropdownMenu">
-                <div class="header-dropdown">
-                  <h3>Gabung Sebagai Member</h3>
-                </div>
-                <div class="form-login">
-                  <form class="" action="" method="post">
-                    <label for="">Email</label>
-                    <div class="form-inline">
-                      <input type="email" name="" value="" class="form-control" placeholder="e.g email@example.com">
-                      <button type="submit" name="button" class="btn btn-blue">Register</button>
-                      <label for="">Data Anda dilindungi dan tidak akan disebarluaskan.</label>
-                    </div>
-                  </form>
-                </div>
-                <div class="other-log form-login">
-                  <p class="text-center">Sudah memiliki akun? <a href="#" class="forgot">Log In <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-                </div>
-                <div class="other-log bg-white">
-                  <p class="text-center">Dengan melakukan pendaftaran, saya setuju dengan <a href="#" class="forgot">Kebijakan Privasi dan Syarat & Ketentuan <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-                </div>
-                <div class="other-log text-left account-first">
-                  <a href="#"><img src="assets/img/fb-square.png" class="img-fluid"> Daftar melalui Facebook</a>
-                </div>
-                <div class="other-log text-left account-second">
-                  <a href="#"><img src="assets/img/gp-square.png" class="img-fluid"> Daftar melalui Google</a>
-                </div>
-              </div>
-            </li>
-            <li class="lang">
-              <ul class="list-unstyled">
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                <li class="init"><img src="assets/img/ind.png" class="img-fluid inline-block"> IN</li>
-                <li data-value="Indonesia" class="col-dark ina"><img src="assets/img/ind.png" class="img-fluid inline-block"> IN</li>
-                <li data-value="English" class="col-dark eng"><img src="assets/img/eng.png" class="img-fluid inline-block"> EN</li>
-              </ul>
-            </li>
-            <li class="lang">
-              <ul class="list-unstyled-coin">
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                <li class="init">IDR</li>
-                <li data-value="idr" class="col-dark ina">IDR</li>
-                <li data-value="usd" class="col-dark eng">USD</li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><span class="number">5</span>E-Tiket Terbit</a>
             </li>
           </ul>
         </div>
@@ -129,7 +56,7 @@
     </nav>
   </header>
 
-  <div class="section">
+  <div class="section checkout">
     <div class="container">
       <h1 class="title">Pemesanan</h1>
       <h2> Data Pemesanan</h2>
