--- a/upload-payment.html
+++ b/upload-payment.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pasar Produk BUMN | Payment</title>
+    <title>Pasar Produk BUMN | Upload Payment</title>
 
     <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -38,10 +38,10 @@
             <li class="nav-item done">
               <a class="nav-link" href="#"><i class="fa fa-check-circle" aria-hidden="true"></i> Booking</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#"><span class="number">2</span> Review</a>
+            <li class="nav-item done">
+              <a class="nav-link" href="#"><i class="fa fa-check-circle" aria-hidden="true"></i> Review</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#"><span class="number">3</span> Pembayaran</a>
             </li>
             <li class="nav-item">
@@ -58,106 +58,27 @@
 
   <div class="section checkout">
     <div class="container">
-      <h1 class="title">Pembayaran</h1>
-      <h2> Data Pemesanan</h2>
+      <h1 class="title">Upload Payment Proof</h1>
       <div class="row">
         <div class="col-md-8 col-12">
           <div class="content-wide">
-            <div class="row">
-              <div class="col-6 bg-blue">
-                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                  <div class="title">PREFERRED METHOD</div>
-                  <a class="nav-link active" id="v-pills-one-tab" data-toggle="pill" href="#v-pills-one" role="tab" aria-controls="v-pills-one" aria-selected="true">Transfer</a>
-                  <a class="nav-link" id="v-pills-two-tab" data-toggle="pill" href="#v-pills-two" role="tab" aria-controls="v-pills-two" aria-selected="false">Credit Card<br/><span>Up to 12x Installments available from 9 Banks</span></a>
-                  <a class="nav-link" id="v-pills-three-tab" data-toggle="pill" href="#v-pills-three" role="tab" aria-controls="v-pills-three" aria-selected="false">ATM</a>
-                  <a class="nav-link" id="v-pills-four-tab" data-toggle="pill" href="#v-pills-four" role="tab" aria-controls="v-pills-four" aria-selected="false">CIMB Cliks</a>
-                  <a class="nav-link" id="v-pills-five-tab" data-toggle="pill" href="#v-pills-five" role="tab" aria-controls="v-pills-five" aria-selected="false">BCA Klikpay</a>
-                  <a class="nav-link" id="v-pills-six-tab" data-toggle="pill" href="#v-pills-six" role="tab" aria-controls="v-pills-six" aria-selected="false">Mandiri Debit</a>
-                  <a class="nav-link" id="v-pills-seven-tab" data-toggle="pill" href="#v-pills-seven" role="tab" aria-controls="v-pills-seven" aria-selected="false">Indomaret</a>
-                  <a class="nav-link" id="v-pills-eight-tab" data-toggle="pill" href="#v-pills-eight" role="tab" aria-controls="v-pills-eight" aria-selected="false">Alfamart</a>
+            <div class="box-information-input">
+                <div class="box-title">
+                    <span class="block blue">Your booking status:</span>
+                    <strong class="blue">Waiting for Payment Proof</strong>
                 </div>
-              </div>
-              <div class="col-6 box">
-                <div class="tab-content" id="v-pills-tabContent">
-                  <div class="tab-pane fade show active" id="v-pills-one" role="tabpanel" aria-labelledby="v-pills-one-tab">
-                    <div class="box-method">
-                      <div class="title">Complete payment in 03:54:44</div>
-                      <h5>Transfer</h5>
-                      <div class="alert-box"><i class="fa fa-info-circle"></i> You can transfer from any banking channel (m-Banking, SMS Banking or ATM)</div>
-                      <p class="select">Select a Destination Account</p>
-                      <div class="radio">
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-                          <label class="custom-control-label" for="customRadio1">BCA <div class="img"><img src="assets/img/bca.png" class="img-fluid"/></div></label>
-                        </div>
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                          <label class="custom-control-label" for="customRadio2">Mandiri <div class="img"><img src="assets/img/mandiri.png" class="img-fluid"/></div></label>
-                        </div>
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-                          <label class="custom-control-label" for="customRadio3">BRI <div class="img"><img src="assets/img/bri.png" class="img-fluid"/></div></label>
-                        </div>
-                        <div class="custom-control custom-radio">
-                          <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input">
-                          <label class="custom-control-label" for="customRadio4">BNI <div class="img"><img src="assets/img/bni.png" class="img-fluid"/></div></label>
-                        </div>
-                      </div>
-                      <div class="check-slide">
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="customCheck1">
-                          <label class="custom-control-label" for="customCheck1">Add Coupon</label>
-                        </div>
-                        <div class="custom-control custom-checkbox redeem">
-                          <input type="checkbox" class="custom-control-input" id="customCheck2">
-                          <label class="custom-control-label" for="customCheck2">Redeem Points</label>
-                          <span class="desc">71 Points</span>
-                          <span class="max desc">Minimum of 2500 Points required</span>
-                        </div>
-                      </div>
-                      <div class="price-detil">
-                        <h6>Price Details</h6>
-                        <div class="table">
-                          <table class="table">
-                            <tr>
-                              <td>Citilink (Adult) x 1</td>
-                              <td>Rp. 438.500</td>
-                            </tr>
-                            <tr>
-                              <td>Baggage CGK-PLM</td>
-                              <td class="green">FREE</td>
-                            </tr>
-                            <tr>
-                              <td>Unique Code</td>
-                              <td class="red">Rp. -822</td>
-                            </tr>
-                            <tr class="footer">
-                              <td>Total Price</td>
-                              <td>Rp. 437.672</td>
-                            </tr>
-                          </table>
-                        </div>
-                      </div>
-                      <div class="bg-blue">
-                        <span>this account (novitahidayati52@gmail.com) will earn 35 points</span>
-                      </div>
-                      <div class="footer-box">
-                        <p>by clicking the button below, you agree to <a href="#" class="blue">pasarprodukbumn's Terms & Condition</a> and <a href="#" class="blue">Privacy Policy</a></p>
-                      </div>
-                      <div class="action">
-                        <button type="button" class="btn btn-blue">Pay With Transfer</button>
-                      </div>
+                <div class="inner-information text-center">
+                    <div class="img-icon">
+                        <i class="fa fa-upload" aria-hidden="true"></i>
                     </div>
-                  </div>
-                  <div class="tab-pane fade" id="v-pills-two" role="tabpanel" aria-labelledby="v-pills-two-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-three" role="tabpanel" aria-labelledby="v-pills-three-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-four" role="tabpanel" aria-labelledby="v-pills-four-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-five" role="tabpanel" aria-labelledby="v-pills-five-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-six" role="tabpanel" aria-labelledby="v-pills-six-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-seven" role="tabpanel" aria-labelledby="v-pills-seven-tab">...</div>
-                  <div class="tab-pane fade" id="v-pills-eight" role="tabpanel" aria-labelledby="v-pills-eight-tab">...</div>
+                    <p class="informa-desc">
+                        Please upload your payment proof to speed up the payment verification process.
+                    </p>
+                    <p class="desc">You may upload up to 3MB in PNG, JPG, or JPEG format.</p>
+                    <div class="action text-center mb-10">
+                        <button type="file" class="btn btn-blue">Upload Payment Proof</button>
+                    </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
